Prompt Engineering File Upload

--- a/promptEngineering.ipynb
+++ b/promptEngineering.ipynb
@@ -88,6 +88,134 @@
    "source": [
     "chain1.run('bear market')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d5b8c1c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_template2 = '''\n",
+    "In an easy and understandable way translate the following sentence \"{sentence}\" into {target_language}\n",
+    "I dont need the extra descriptory text, just the translation is sufficient.\n",
+    "'''\n",
+    "\n",
+    "translator_prompt = PromptTemplate(\n",
+    "    input_variables=['sentence','language'],\n",
+    "    template = demo_template2\n",
+    ")\n",
+    "\n",
+    "# translator_prompt.format(sentence='how are you',target_language='odia')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a489b6f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sentence': 'how are you',\n",
+       " 'target_language': 'odia',\n",
+       " 'text': 'ତୁମେ କେମିତି ଅଛ? (Tume kemiti acha?)'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain2 = LLMChain(llm=llm,prompt=translator_prompt)\n",
+    "chain2({'sentence':'how are you', 'target_language':'odia'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "30ba5b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import FewShotPromptTemplate\n",
+    "\n",
+    "examples = [\n",
+    "    {'nation' : 'India' , 'leader' : 'Narendra Mode'},\n",
+    "    {'nation' : 'Russia' , 'leader' : 'Vladimir Putin'}\n",
+    "]\n",
+    "\n",
+    "example_formatter_template = \"\"\"\n",
+    "Nation : {nation},\n",
+    "Leader : {leader}\n",
+    "\"\"\"\n",
+    "\n",
+    "train_prompt = PromptTemplate(\n",
+    "    input_variables=[\"nation\",\"leader\"],\n",
+    "    template=example_formatter_template\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dee2558e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "few_shot_prompt = FewShotPromptTemplate(\n",
+    "    examples = examples,\n",
+    "    example_prompt = train_prompt,\n",
+    "    prefix = \"Give me the name of the current leader of every input\\n\",\n",
+    "    suffix = \"Nation : {input}\\nLeader: \",\n",
+    "    input_variables = [\"input\"],\n",
+    "    example_separator='\\n'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "813317ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Give me the name of the current leader of every input\\n\\n\\nNation : India,\\nLeader : Narendra Mode\\n\\n\\nNation : Russia,\\nLeader : Vladimir Putin\\n\\nNation : Germany\\nLeader: '"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "few_shot_prompt.format(input='Germany')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "65014243",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nation : Italy\n",
+      "Leader: Giorgia Meloni\n"
+     ]
+    }
+   ],
+   "source": [
+    "chain3 = LLMChain(llm=llm,prompt=few_shot_prompt)\n",
+    "response = chain3({'input':'Italy'})\n",
+    "print(response['text'])"
+   ]
   }
  ],
  "metadata": {
